test/bad/b28.erl
-module(b28).

f(X) ->
    if
        X           -> "";
        true        -> 1
    end.